# leptos-remix-icon

./: Cargo.toml  LICENSE  README.md
examples/tailwind_csr/src/: app.rs
examples/tailwind_csr_cdn/: Cargo.toml  index.html
examples/tailwind_csr_cdn/src/: app.rs
examples/tailwind_csr_local/: .gitignore  Cargo.toml  index.html
examples/tailwind_csr_local/src/: app.rs
src/: lib.rs  pkg.rs
