[package]
name = "leptos-remix-icon"
description = "Easily integrate Remix icons in Leptos applications"
version = "1.0.0"
edition = "2021"
authors = ["Adeoye Adefemi<adefemiadeoye@yahoo.com>"]
license = "MIT"
license-file = "./LICENSE"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = "0.6.11"
